force-app/main/default/objects/copado__Selenium_Test_Suite__c/copado__Selenium_Test_Suite__c.object-meta.xml
<CustomObject>
    <label>Selenium Test Suite</label>
    <nameField>
        <label>Selenium Test Suite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selenium Test Suites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>