force-app/main/default/objects/copado__Selenium_Test_Suite__c/fields/copado__Notes__c.field-meta.xml
<CustomField>
    <fullName>copado__Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>