force-app/main/default/objects/copado__Selenium_Test_Suite__c/fields/copado__Test_Script__c.field-meta.xml
<CustomField>
    <fullName>copado__Test_Script__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This lookup relates to the Copado Change Management test scripts that are related to User Stories.</inlineHelpText>
    <label>Test Script</label>
    <referenceTo>copado__Test_Script__c</referenceTo>
    <relationshipLabel>Selenium Test Suites</relationshipLabel>
    <relationshipName>SeleniumTestSuites</relationshipName>
    <type>Lookup</type>
</CustomField>